[package]
name = "sn3218"
version = "0.1.0"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"
repository = "https://github.com/zenria/sn3218"
description = "talk to sn3218 using embedded-hal"
keywords=["embedded", "gfx-hat", "gfxhat", "raspberry"]
exclude = [
    "*.iml",
]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal="0.2"
